# radio

./: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep  libggml-base.dylib  libggml-cpu.dylib  libggml-metal.0.11.1.dylib  libllama.0.0.9113.dylib  libmtmd.0.0.9113.dylib
src-tauri/capabilities/: default.json
src-tauri/icons/: icon-test.icns
src-tauri/src/: lib.rs
